# odoo-bringout-mrp_production_import_xlsx

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
mrp_production_import_xlsx/: README.rst  __init__.py  __manifest__.py  enhance_1.md  enhance_2.md  enhance_opus.md  enhance_opus_2.md  plan.md  review_1.md  step_1_2.md  step_3.md  step_4.md  step_5.md  step_6.md
mrp_production_import_xlsx/i18n/: bs.po  bs_BA.po  mrp_production_import_xlsx.pot
mrp_production_import_xlsx/security/: ir.model.access.csv
mrp_production_import_xlsx/static/src/js/: mrp_import_progress.js
mrp_production_import_xlsx/tests/: test_mrp_import.py
mrp_production_import_xlsx/views/: import_wizard_view.xml
mrp_production_import_xlsx/wizards/: __init__.py  mrp_import_wizard.py
